@startuml

title __MAP's Class Diagram__\n

  namespace org.heckcorp.spacegame {
    namespace map {
      class org.heckcorp.spacegame.map.Calculator {
          {static} + distance()
          {static} + distance()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      class org.heckcorp.spacegame.map.Hex {
          + x : int
          + y : int
          {static} - serialVersionUID : long
          - units : List<Unit>
          + Hex()
          + addUnit()
          + getBestDefender()
          + getOwner()
          + getPosition()
          + getUnits()
          + isAdjacentTo()
          + isEmpty()
          + removeUnit()
          + toString()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      class org.heckcorp.spacegame.map.HexMap {
          + height : int
          + width : int
          - hexes : Hex[][]
          - log : Logger
          {static} - serialVersionUID : long
          + HexMap()
          + HexMap()
          + addUnit()
          {static} + adjacent()
          {static} + getAdjacent()
          + getAdjacentHex()
          + getAdjacentHexes()
          {static} + getAllAdjacent()
          {static} + getDirection()
          {static} + getDirection()
          + getHex()
          + getHex()
          + getHexes()
          + getHexesAtRange()
          + getHexesInRange()
          + getPathfinder()
          + getRandomHex()
          + getRandomHex()
          + getSize()
          {static} + isAdjacent()
          + isInMap()
          + write()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      class org.heckcorp.spacegame.map.Pathfinder {
          {static} - serialVersionUID : long
          + Pathfinder()
          + findPath()
          - createPath()
          - findNode()
          - generateSuccessors()
          - getLowestScoreNode()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      class org.heckcorp.spacegame.map.Pathfinder.Node {
          + point : Point
          - cost : Integer
          - distance : Integer
          + Node()
          + computeDistance()
          + getCost()
          + getDistance()
          + getScore()
          + setCost()
          + setDistance()
      }
    }
  }
  

  org.heckcorp.spacegame.map.Hex .up.|> java.io.Serializable
  org.heckcorp.spacegame.map.Hex .up.|> org.heckcorp.spacegame.Positionable
  org.heckcorp.spacegame.map.Hex o-- org.heckcorp.spacegame.Player : owner
  org.heckcorp.spacegame.map.HexMap .up.|> java.io.Serializable
  org.heckcorp.spacegame.map.HexMap o-- org.heckcorp.spacegame.map.Pathfinder : pathfinder
  org.heckcorp.spacegame.map.Pathfinder .up.|> java.io.Serializable
  org.heckcorp.spacegame.map.Pathfinder o-- org.heckcorp.spacegame.map.HexMap : map
  org.heckcorp.spacegame.map.Pathfinder +-down- org.heckcorp.spacegame.map.Pathfinder.Node
  org.heckcorp.spacegame.map.Pathfinder.Node o-- org.heckcorp.spacegame.map.Pathfinder.Node : predecessor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
